src/snapshots/monkey_rust__parser__tests__parse_array_literal.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    Literal:
      Array:
        - Literal:
            Int: 1
        - BinaryExp:
            operator: Mul
            lhs:
              Literal:
                Int: 2
            rhs:
              Literal:
                Int: 2
        - Literal:
            String: ola
        - Function:
            parameters:
              - x
            body:
              - Return:
                  Identifier: x
- Expression:
    Literal:
      Array: []
- Expression:
    Literal:
      Array:
        - Literal:
            Array:
              - Literal:
                  Int: 1
              - Literal:
                  Int: 2
        - Literal:
            Int: 3

