src/snapshots/monkey_rust__parser__tests__parse_grouped_expression.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    BinaryExp:
      operator: Mul
      lhs:
        BinaryExp:
          operator: Add
          lhs:
            Literal:
              Int: 5
          rhs:
            Literal:
              Int: 5
      rhs:
        Literal:
          Int: 5
- Expression:
    UnaryExpression:
      value:
        BinaryExp:
          operator: Add
          lhs:
            Literal:
              Int: 5
          rhs:
            Literal:
              Int: 5
      operator: Oposite

