src/snapshots/monkey_rust__parser__tests__parse_let_statement.snap
---
source: src/parser.rs
expression: program.nodes
---
- Let:
    identifier: x
    value:
      Literal: "False"
- Let:
    identifier: y
    value:
      Literal:
        Int: 10
- Let:
    identifier: foobar
    value:
      Literal: "True"

