src/snapshots/monkey_rust__parser__tests__parse_prefix_expression.snap
---
source: src/parser.rs
expression: program.nodes
---
- Expression:
    UnaryExpression:
      value:
        Literal:
          Int: 1
      operator: Minus
- Expression:
    UnaryExpression:
      value:
        Literal:
          Int: 5
      operator: Not
- Expression:
    UnaryExpression:
      value:
        UnaryExpression:
          value:
            UnaryExpression:
              value:
                Literal:
                  Int: 2
              operator: Minus
          operator: Not
      operator: Not

